--- a/assignments/assignment01/ProjectEuler1.ipynb
+++ b/assignments/assignment01/ProjectEuler1.ipynb
@@ -22,24 +22,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233168\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "summ = 0                          #rolling count\n",
+    "x = 1                             #loop variable\n",
+    "while x < 1000:                   #while loop that iterates 999 times\n",
+    "    if x%3 == 0 or x%5 == 0:      # checks if x is a multiple of 3 or 5\n",
+    "        summ += x\n",
+    "    x +=1                         #increments loop variable to test next number\n",
+    "\n",
+    "print (summ)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": false,
