--- a/assignments/assignment02/ProjectEuler2.ipynb
+++ b/assignments/assignment02/ProjectEuler2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -33,10 +33,30 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4613732\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "fibbs = [0,1]\n",
+    "summ =0\n",
+    "for x in range(2,34):\n",
+    "    fibbs.append(fibbs[x-1]+fibbs[x-2])\n",
+    "\n",
+    "    \n",
+    "for a in fibbs:\n",
+    "        if a%2 == 0 and a <4000000 :\n",
+    "            summ +=a\n",
+    "\n",
+    "print(summ)\n",
+    "            \n",
+    "\n"
    ]
   },
   {
