--- a/assignments/assignment02/ProjectEuler4.ipynb
+++ b/assignments/assignment02/ProjectEuler4.ipynb
@@ -24,19 +24,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "906609\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "pal = 0\n",
+    "for x in range(1,1000):\n",
+    "    for a in range(1,1000):\n",
+    "        if str(x*a) == (str(x*a)[::-1]) and (x*a) > pal:\n",
+    "            pal = (x*a)\n",
+    "\n",
+    "print(pal)\n"
    ]
   },
   {
