--- a/assignments/assignment02/ProjectEuler6.ipynb
+++ b/assignments/assignment02/ProjectEuler6.ipynb
@@ -30,19 +30,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def sum_of_squares(num):\n",
+    "    summ = 0\n",
+    "    for i in range(1,num+1):\n",
+    "        summ += i**2\n",
+    "    return summ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3025\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_of_sum(num):\n",
+    "    square = 0\n",
+    "    for i in range(1,num+1):\n",
+    "        square += i\n",
+    "    return square**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25164150\n"
+     ]
+    }
+   ],
+   "source": [
+    "def difference(num):\n",
+    "    return square_of_sum(num) - sum_of_squares(num)\n",
+    "\n",
+    "print(difference(100))"
    ]
   },
   {
