--- a/assignments/assignment02/ProjectEuler9.ipynb
+++ b/assignments/assignment02/ProjectEuler9.ipynb
@@ -28,19 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31875000\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "product = 0\n",
+    "for a in range(1,500):\n",
+    "    for b in range(1,500):  \n",
+    "            if (a**2 + b**2 == (1000-a-b)**2):\n",
+    "                product = int(a*b*((a**2 + b**2)**.5))\n",
+    "                \n",
+    "print(product)"
    ]
   },
   {
